--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,9 @@
 // Angular Material themes - Configuração simplificada
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
 
+// PrimeNG icons
+@import 'primeicons/primeicons.css';
+
 // ========================================
 // PLANWISE GLOBAL THEME SYSTEM
 // ========================================
