fix: submit button

--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -172,6 +172,12 @@
       <div class="graphic-ring ring-1"></div>
       <div class="graphic-ring ring-2"></div>
       <div class="graphic-ring ring-3"></div>
+      
+      <!-- Ícone central de dinheiro -->
+      <div class="graphic-center-icon">
+        <i class="pi pi-dollar"></i>
+      </div>
+      
       <div class="graphic-particles">
         <div class="particle" *ngFor="let particle of particles"></div>
       </div>
