--- a/src/app/features/dashboard/dashboard.component.scss
+++ b/src/app/features/dashboard/dashboard.component.scss
@@ -380,13 +380,14 @@
       .chart-container {
         position: relative;
         z-index: 2;
-        height: 320px;
+        height: 280px;
+        max-height: 280px;
         padding: 10px;
         
         canvas {
-          max-height: 100%;
+          max-height: 260px !important;
           width: 100% !important;
-          height: 100% !important;
+          height: auto !important;
         }
       }
     }
