fix: new expense button css

--- a/src/app/features/expenses/list/expense-list-v2.component.html
+++ b/src/app/features/expenses/list/expense-list-v2.component.html
@@ -12,7 +12,7 @@
         <p>Gerencie e monitore todos os seus gastos</p>
       </div>
     </div>
-    <button mat-raised-button color="primary" class="new-expense-btn" (click)="createNew()">
+    <button mat-raised-button class="new-expense-btn" (click)="createNew()">
       <mat-icon>add</mat-icon>
       Nova Despesa
     </button>
